Fixed project link alignment.

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -66,7 +66,7 @@
 
 .Project-points {
     width: 100%;
-    margin: 0px auto 8px auto;
+    margin: 0px auto;
 }
 
 .Project-points li {
@@ -75,6 +75,7 @@
 
 .Links {
     width: 100%;
+    justify-content: flex-start;
 }
 
 #tumblr-a {
@@ -108,8 +109,8 @@
 
 @media screen and (max-width: 960px) {
     .Project-card {
-        flex-direction: column;
-        padding: 8px;
+        flex-direction: column-reverse;
+        padding: 0px 8px 8px 8px;
     }
 
     .Project-name {
@@ -122,5 +123,9 @@
 
     .Project-image {
         margin-top: 0.5rem;
+    }
+
+    .Links {
+        justify-content: center;
     }
 }
